assets/main.scss
$primary: #f0b913;
@import "bootstrap-5.3.0/scss/bootstrap";
@import "fonts";
@import "frontpage";


body {
  min-height: 100vh;
  display: grid;
  grid-template-rows: auto 1fr auto;
}

h1 {
  font-family: Rajdhani, sans-serif;
  font-weight: 600;
}

header {
  background-repeat: no-repeat;
  background-image: url(/header.jpg);
  background-size: cover;
  background-position: center center;
  color: white;
}

nav {
  font-family: Rajdhani, sans-serif;
  font-weight: 700;
}

.nav-link {
  text-transform: uppercase;
}

.navbar[data-bs-theme=dark] {
  --bs-navbar-active-color: var(--bs-primary);
  --bs-navbar-color: #ffffffdd;
  --bs-navbar-hover-color: #ffffffff;
}

.discord-link {
  padding-left: 8px;
}

blockquote {
  font-style: italic;
  padding-left: 15px;
  border-left: 3px solid #565857;
}

.thumbnail {
  text-align: center;
  padding: 10px;
}

